# credential-lab

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: epic_snapshot.py  epic_snapshot_account_a.json  epic_snapshot_account_b.json  epic_snapshot_after.json  epic_snapshot_after_epic_run.json  epic_snapshot_before.json  epic_snapshot_before_epic_run.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auto_login.rs  cdp.rs  db.rs  encryption.rs  epic_api.rs  game_detect.rs  launcher_detect.rs  main.rs  switcher.rs
src-tauri/src/credentials/: ea.rs  epic.rs  mod.rs  steam.rs
src/components/: CdpTab.tsx  CredentialsTab.tsx  LaunchersTab.tsx  LogPanel.tsx  TestLaunchTab.tsx
src/styles/: globals.css
